[package]
name = "motionsensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
pir-motion-sensor = "0.1.2"
raspicam = {git = "https://github.com/lkbhargav/raspicam.git", rev="8164dadfbf3a75172fb3d2fdcd086126c89ff8ac"}
tokio = { version = "1.27.0", features = ["full"] }
