[package]
name = "motionsensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
pir-motion-sensor = "0.1.2"
raspicam = "0.1.0"
# raspicam = {git = "https://github.com/lkbhargav/raspicam.git", rev="da740b37681b3663424c67e9e9685ce7edb40e85"}
tokio = { version = "1.27.0", features = ["full"] }
