[package]
name = "motionsensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
pir-motion-sensor = "0.1.2"
tokio = { version = "1.27.0", features = ["full"] }
email = { git = "https://github.com/lkbhargav/emailer.git" }
openssl = { version = "0.10", features = ["vendored"] }
rusqlite = "0.29.0"
